<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="label_sptstreamer">SPOTIFY STREAMER</string>
    <string name="btn_sptstreamer_display">Spotify Streamer</string>

    <string name="label_scoresapp">SCORES APP</string>
    <string name="btn_scoreapp_display">Football Scores</string>

    <string name="label_libraryapp">LIBRARY APP</string>
    <string name="btn_libraryapp_display">Library App</string>

    <string name="label_builditbigger">BUILD IT BIGGER</string>
    <string name="btn_buidbig_display">Build It Bigger</string>

    <string name="label_xyzreader">XYZ READER</string>
    <string name="btn_xyzreader_display">XYZ Reader</string>

    <string name="label_myownapp">CAPSTONE: MY OWN APP</string>
    <string name="btn_myownapp_display">Capstone</string>

    <string name="label_selctedmessageprefix">This button will launch my </string>
    <string name="label_space"> </string>
    <string name="label_appescalmation">app!</string>

    <string name="label_mynanodegree">My Nanodegree Apps!</string>
</resources>
