<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioMainActivity"
    android:background="@color/tlink_style_background"
    android:id="@+id/layout_relative">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:id="@+id/layout_linear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_mynanodegree"
            android:id="@+id/txtview_title"
            android:layout_gravity="center_horizontal"
            android:textColorHighlight="#010101"
            android:textSize="25sp"
            android:textColorLink="#020202"
            android:textColor="#010101" />

        <Button
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:text="@string/label_sptstreamer"
            android:id="@+id/btn_sptstreamer"
            android:height="50dp"
            android:background="@color/tlink_porf_main_button_background_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:enabled="true"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:text="@string/label_scoresapp"
            android:id="@+id/btn_scoreapp"
            android:height="50dp"
            android:background="@color/tlink_porf_main_button_background_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/techlink_portf_main_button_margin"
            android:enabled="true"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:text="@string/label_libraryapp"
            android:id="@+id/btn_libraryapp"
            android:height="50dp"
            android:background="@color/tlink_porf_main_button_background_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/techlink_portf_main_button_margin"
            android:enabled="true"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:text="@string/label_builditbigger"
            android:id="@+id/btn_buidbig"
            android:height="50dp"
            android:background="@color/tlink_porf_main_button_background_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/techlink_portf_main_button_margin"
            android:enabled="true"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:text="@string/label_xyzreader"
            android:id="@+id/btn_xyzreader"
            android:height="50dp"
            android:background="@color/tlink_porf_main_button_background_color"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:layout_marginTop="@dimen/techlink_portf_main_button_margin"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:text="@string/label_myownapp"
            android:id="@+id/btn_myownapp"
            android:height="50dp"
            android:background="#ad3731"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:layout_marginTop="@dimen/techlink_portf_main_button_margin"
            android:textColor="@android:color/white"
            android:onClick="onButtonClick" />

    </LinearLayout>
</ScrollView>
